hphp/hack/test/typecheck/shape_idx_unresolved.php.exp
File "shape_idx_unresolved.php", line 9, characters 10-44:
Invalid return type (Typing[4110])
File "shape_idx_unresolved.php", line 8, characters 18-20:
Expected int
File "shape_idx_unresolved.php", line 4, characters 29-32:
But got ?int
